styled form with SASS

--- a/sass/helpers/base.sass
+++ b/sass/helpers/base.sass
@@ -1,4 +1,28 @@
 // Base
+*
+  box-sizing: border-box
+  margin: 0
+  padding: 0
+  font-family: sans-serif
 
 html
   font-size: 62.5%
+
+body
+  font-size: 0
+  width: 100%
+
+form
+  font-size: $fontSize--base
+
+input
+  -webkit-appearance: none
+  -moz-appearance: none
+  appearance: none
+  outline: none
+  border: none
+  background-color: none
+
+.input--wrapper
+  width: 90%
+  margin: 0 auto
