--- a/sass/utils/vars.sass
+++ b/sass/utils/vars.sass
@@ -3,3 +3,8 @@
 $fontSize--base: 1.4rem
 
 $numberOfColumns: 12
+
+// colors
+$color__white: rgb(255, 255, 255)
+$color__blue: rgb(66, 138, 201)
+$color__lightblue: rgb(200, 221, 239)
