--- a/sass/main.sass
+++ b/sass/main.sass
@@ -14,16 +14,4 @@
 @import "blocks/all"
 
 //font awesome
-@import "scss/variables"
-@import "scss/mixins"
-@import "scss/path"
-@import "scss/core"
-@import "scss/larger"
-@import "scss/fixed-width"
-@import "scss/list"
-@import "scss/bordered-pulled"
-@import "scss/animated"
-@import "scss/rotated-flipped"
-@import "scss/stacked"
-@import "scss/icons"
-@import "scss/screen-reader"
+@import "scss/font-awesome.scss"
