--- a/styles/main.css
+++ b/styles/main.css
@@ -152,12 +152,16 @@ input {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem; }
 
+/*!
+ *  Font Awesome 4.6.1 by @davegandy - http://fontawesome.io - @fontawesome
+ *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
+ */
 /* FONT PATH
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url("../fonts/fontawesome-webfont.eot?v=4.6.1");
-  src: url("../fonts/fontawesome-webfont.eot?#iefix&v=4.6.1") format("embedded-opentype"), url("../fonts/fontawesome-webfont.woff2?v=4.6.1") format("woff2"), url("../fonts/fontawesome-webfont.woff?v=4.6.1") format("woff"), url("../fonts/fontawesome-webfont.ttf?v=4.6.1") format("truetype"), url("../fonts/fontawesome-webfont.svg?v=4.6.1#fontawesomeregular") format("svg");
+  src: url("../sass/fonts/fontawesome-webfont.eot?v=4.6.1");
+  src: url("../sass/fonts/fontawesome-webfont.eot?#iefix&v=4.6.1") format("embedded-opentype"), url("../sass/fonts/fontawesome-webfont.woff2?v=4.6.1") format("woff2"), url("../sass/fonts/fontawesome-webfont.woff?v=4.6.1") format("woff"), url("../sass/fonts/fontawesome-webfont.ttf?v=4.6.1") format("truetype"), url("../sass/fonts/fontawesome-webfont.svg?v=4.6.1#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal; }
 .fa {
